--- a/app/src/main/res/layout/layout_question_details.xml
+++ b/app/src/main/res/layout/layout_question_details.xml
@@ -10,7 +10,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-        <androidx.core.widget.ContentLoadingProgressBar
+        <ProgressBar
                 android:id="@+id/progress_bar"
                 android:layout_width="match_parent"
                 android:layout_height="30dp" />
