--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -1,18 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/holo_blue_light">
 
-    <ImageButton
-            android:id="@+id/up_button"
+    <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:background="@color/transparent"
-            android:padding="16dp"
-            android:src="@drawable/ic_arrow_back" />
+            android:layout_centerVertical="true">
+
+        <ImageButton
+                android:id="@+id/up_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/transparent"
+                android:padding="16dp"
+                android:src="@drawable/ic_arrow_back"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+        <ImageButton
+                android:id="@+id/hamburger_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/transparent"
+                android:padding="16dp"
+                android:src="@drawable/ic_menu"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+    </FrameLayout>
 
     <TextView
             android:id="@+id/title"
