--- a/app/src/main/res/layout/layout_question_details.xml
+++ b/app/src/main/res/layout/layout_question_details.xml
@@ -3,8 +3,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".screens.questiondetails.QuestionDetailsActivity">
+        android:orientation="vertical">
 
     <include layout="@layout/element_toolbar" />
 
