--- a/app/src/main/res/layout/layout_question_details.xml
+++ b/app/src/main/res/layout/layout_question_details.xml
@@ -19,7 +19,9 @@
             <ProgressBar
                     android:id="@+id/progress_bar"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp" />
+                    android:layout_height="30dp"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
 
             <TextView
                     android:id="@+id/title"
